public interface Transport {
  void Deliver();
}
