using System;

class Truck : Transport
{
  public void Deliver()
  {
    Console.WriteLine("Truck: Deliver by earth");
  }
}