@startuml
class Program {
    {static} Main(args:string[]) : void
    {static} DeliverBy(logistic:Logistic) : void
}
enum TransportType {
    SHIP,
    TRUCK,
}
interface Logistic {
    CreateTransport() : Transport
}
class RoadLogistic {
    + CreateTransport() : Transport
}
Logistic <|-- RoadLogistic
class SeaLogistic {
    + CreateTransport() : Transport
}
Logistic <|-- SeaLogistic
class ShortPathLogistic {
    + CreateTransport() : Transport
}
Logistic <|-- ShortPathLogistic
class Ship {
    + Deliver() : void
}
Transport <|-- Ship
interface Transport {
    Deliver() : void
}
class Truck {
    + Deliver() : void
}
Transport <|-- Truck
@enduml
